components/policies/pod-security-standards/baseline/ban-host-path/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      volumeMounts:
        - name: temp
          mountPath: /scratch
  volumes:
    - name: temp
      emptyDir: {}
---
